--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 
 	<properties>
-		<drools.version>6.1.0-SNAPSHOT</drools.version>
+		<drools.version>6.0.0.Final</drools.version>
 		<hibernate.version>3.5.4-Final</hibernate.version>
 		<hibernate.core.version>3.5.4-Final</hibernate.core.version>
 		<junit.version>4.8.1</junit.version>
@@ -25,18 +25,22 @@
 	</properties>
 
 
+
 	<dependencies>
 
 
-		<dependency>
+		<!--dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>knowledge-api</artifactId>
 			<version>${drools.version}</version>
-		</dependency>
+		</dependency-->
+
+		
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-compiler</artifactId>
 			<version>${drools.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 
 
