--- a/entry-point/pom.xml
+++ b/entry-point/pom.xml
@@ -14,7 +14,18 @@
 	</parent>
 
 
+	<dependencies>
 
-	
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-compiler</artifactId>
+			<version>${drools.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+
+	</dependencies>
+
+
+
 </project>
 
