--- a/pom.xml
+++ b/pom.xml
@@ -11,32 +11,56 @@
 	<packaging>pom</packaging>
 
 
+
 	<properties>
 		<drools.version>6.0.0.Final</drools.version>
-		<hibernate.version>3.5.4-Final</hibernate.version>
-		<hibernate.core.version>3.5.4-Final</hibernate.core.version>
+		<jbpm.version>6.0.0.Final</jbpm.version>
+		<hibernate.version>4.2.0.Final</hibernate.version>
+		<hibernate.core.version>4.2.0.Final</hibernate.core.version>
+		<slf4j.version>1.6.4</slf4j.version>
+		<jboss.javaee.version>1.0.0.Final</jboss.javaee.version>
+		<logback.version>1.0.9</logback.version>
+		<h2.version>1.3.161</h2.version>
+		<btm.version>2.1.4</btm.version>
 		<junit.version>4.8.1</junit.version>
-		<slf4j-api.version>1.6.4</slf4j-api.version>
-		<slf4j-log4j12.version>1.6.4</slf4j-log4j12.version>
-		<h2.version>1.3.171</h2.version>
-		<btm.version>2.1.2</btm.version>
-
-
 	</properties>
+
 
 
 
 	<dependencies>
 
 
-		<!--dependency>
-			<groupId>org.drools</groupId>
-			<artifactId>knowledge-api</artifactId>
-			<version>${drools.version}</version>
-		</dependency-->
+		<!-- define drools BOM -->
 
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-bom</artifactId>
+			<type>pom</type>
+			<version>${drools.version}</version>
+			<scope>import</scope>
+		</dependency>
+
+		<!-- define drools BOM -->
+
+		<dependency>
+			<groupId>org.jbpm</groupId>
+			<artifactId>jbpm-bom</artifactId>
+			<type>pom</type>
+			<version>${jbpm.version}</version>
+			<scope>import</scope>
+		</dependency>
+		
+		
 		
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<!--dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-compiler</artifactId>
 			<version>${drools.version}</version>
@@ -87,7 +111,7 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j-api.version}</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency-->
 
 
 	</dependencies>
@@ -96,6 +120,7 @@
 
 	<modules>
 		<module>entry-point</module>
+		<module>jbpm</module>
 	</modules>
 
 
